[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scarf*"]
exclude = ["example*"]

[project]
name = "scarf"
description = "Self-supervised contrastive learning using feature corruptions on tabular data."
authors = [{name = "Clément Labrugere"}]
version = "0.1"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = ["torch==2.2", "numpy==1.26"]
